--- a/index.html
+++ b/index.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Alexandre Correia's Portfolio</title>
-</head>
-
-<body>
-  <h1>Alexandre Correia's Portfolio</h1>
-  <h2>I'm a Web Developer</h2>
-<hr/>
-  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-  <img src="./assets/images/movie-ranking Alex.png" height="200" alt="movie ranking"/> <br/>
-  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-  <img src="./assets/images/birthday-invite Alex.png" height="250" width="250" alt="birthday invite"/>
-  <hr/>
-  <a href="./public/about.html">About Me</a> 
-  <a href="./public/contact.html">Contact Me</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>My Resume</title>
+  </head>
+  <body>
+    <h1>Alexandre Correia</h1>
+    <img src="./WhatsApp Image 2024-10-15 at 00.43.05_523ae98d.jpg" alt="profile pic of Alexandre Correia" height="200"/>
+    <h2>Summary</h2>
+    <p>I am a dedicated young professional who enjoys collaborating in a team environment, is communicative, adaptable, and consistently eager to learn.
+    </p>
+    <hr/>
+    <h2>Education and Training</h2>
+    <ul>
+      <li>2022 - Adult Education and Training (EFA), Institute of Employment and Vocational Training (IEFP) Olhão - Child and Youth Caregiver Program (9th grade equivalence)</li>
+      <li>2019 - 2020 - Adult Education and Training (EFA), Institute of Employment and Vocational Training (IEFP) Faro - Course in Administrative Assistance
+      </li>
+    </ul>
+    <hr/>
+    <h2>Professional Experience</h2>
+    <ul>
+      <li>2022/2023/2024 - Engaging in volunteer work at youth camps at the Bias Retreat Center</li>
+      <li>2019 - 2022 - Volunteering at the Sê Mais Sê Melhor Association, Faro - Involvement in the "Faro Youth Club" project - assisting in the organization of activities for disadvantaged children and youth in Faro; <br/>
+        - Environmental Volunteering: "Young Volunteer Program for Nature and Forests" - removal of invasive species, waste cleanup, organization of awareness-raising initiatives, and representing the Association at events to showcase best practices and present awards.
+      </li>
+      <li>2021 - Sovipral, Olhão <br/>
+        - Warehouse Associate; Versatile Staff Member; Logistics
+      </li>
+      <li>2020 - 2021 - VESSEL Volunteer Project at Associação MOJU, Olhão <br/>
+        - Assistance in leisure activities for children in the 2nd and 3rd Cycles
+      </li>
+    </ul>
+    <hr/>
+    <h2>Skills</h2>
+    <ul>
+      <li>Teamwork</li> 
+      <li>Accessibility</li> 
+      <li>Ingenuity</li> 
+      <li>Fortitude</li> 
+      <li>Open-mindedness</li> 
+      <li>Compassion</li>
+      <li>Troubleshooting</li>
+    </ul>
+    <hr/>
+    <h2>Other</h2>
+    <a href="./hobbies.html">My Hobbies</a>
+    <a href="./contact.html">Contact Me</a>
+    <br/>
+    <br/>
+    <footer>© Alexandre Correia. All rights reserved.</footer>
+  </body>
 </html>
